--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,10 @@ html {
     position: relative;
     max-width: 1280px;
     margin: 0 auto;
+
+    @media screen and (max-width: 1024px) {
+        max-width: 952px;
+    }
 }
 
 button {
@@ -73,14 +77,18 @@ header {
 }
 
 .header__more {
-    position: relative;
-    top: 537px;
-    left: 656px;
+    position: absolute;
+    top: 611px;
+    right: 0;
     width: 624px;
     height: 369px;
     background-color: #f8f200;
     padding: 70px;
     clip-path: polygon(8% 0, 100% 0%, 100% 87%, 92% 100%, 0 100%, 0 13%);
+
+    /* @media screen and (max-width: 1024px) {
+        left: 328px;
+    } */
 }
 
 .header__more p {
@@ -97,7 +105,7 @@ header {
 }
 
 .info {
-    padding: 70px;
+    padding: 70px 0;
 }
 
 .info__wrapper {
@@ -106,10 +114,14 @@ header {
         font-weight: 400;
         font-size: 62px;
         color: #000;
+
+        @media screen and (max-width: 1024px) {
+            width: 70%;
+        }
     }
 
     p {
-        width: 952px;
+        width: 75%;
         font-family: "Roboto", serif;
         font-size: 18px;
         line-height: 189%;
@@ -119,6 +131,10 @@ header {
         span {
             font-weight: 700;
             color: #52bedc;
+        }
+
+        @media screen and (max-width: 1024px) {
+            width: 90%;
         }
     }
 }
@@ -130,24 +146,47 @@ header {
     column-gap: 32px;
     row-gap: 53px;
 
-    .info__img-moto-city_24 {
+    @media screen and (max-width: 1024px) {
+        grid-template-columns: repeat(6, 1fr);
+        row-gap: 32px;
+    }
+
+    .info__img-city_24 {
         grid-column: 1/4;
         grid-row: 1/2;
         clip-path: polygon(8% 0, 100% 0%, 100% 81%, 92% 100%, 0 100%, 0 18%);
+
+        @media screen and (max-width: 1024px) {
+            grid-column: 1/4;
+            grid-row: 1/2;
+        }
     }
 
     .info__img-moto {
         grid-column: 1/4;
         grid-row: 2/3;
         clip-path: polygon(8% 0, 100% 0%, 100% 81%, 92% 100%, 0 100%, 0 18%);
+
+        @media screen and (max-width: 1024px) {
+            grid-column: 4/7;
+            grid-row: 1/2;
+        }
     }
 
     .info__img-city {
         grid-column: 4/9;
         grid-row: 1/3;
+        width: 100%;
+
+        @media screen and (max-width: 1024px) {
+            grid-column: 1/7;
+            grid-row: 2/3;
+            clip-path: polygon(6% 0, 100% 0%, 100% 89%, 94% 100%, 0 100%, 0 11%);
+        }
     }
 
     img {
+        width: 100%;
         height: 100%;
         clip-path: polygon(8% 0, 100% 0%, 100% 87%, 92% 100%, 0 100%, 0 13%);
     }
@@ -164,22 +203,42 @@ header {
     display: grid;
     grid-template-columns: repeat(8, 1fr);
     grid-template-rows: repeat(3, 1fr);
+    row-gap: 63px;
+    column-gap: 32px;
+
+    @media screen and (max-width: 1024px) {
+        grid-template-columns: repeat(6, 1fr);
+        grid-template-rows: repeat(2, 1fr);
+    }
 }
 
 .promo_wrapper {
     grid-column: 1/7;
     grid-row: 1/2;
+
+    @media screen and (max-width: 1024px) {
+        grid-column: 1/4;
+        grid-row: 1/2;
+    }
 }
 
 .promo__title {
     display: flex;
     justify-content: start;
 
+    @media screen and (max-width: 1024px) {
+        flex-direction: column;
+    }
+
     h2 {
         font-weight: 400;
         font-size: 62px;
         color: #fff;
         margin: 70px 0 0 32px;
+
+        @media screen and (max-width: 1024px) {
+            margin: 0 15px 0 0;
+        }
     }
 
     img {
@@ -207,7 +266,11 @@ header {
 .promo__form {
     grid-column: 1/4;
     grid-row: 2/4;
-    margin-top: 98px;
+
+    @media screen and (max-width: 1024px) {
+        grid-column: 1/4;
+        grid-row: 2/3;
+    }
 
     input {
         background-color: #000;
@@ -243,10 +306,10 @@ header {
         color: #fff;
         margin-top: 15px;
 
-        .agreement__checkbox {
+        input {
             width: 14px;
             margin: 0 10px 0 0;
-
+            accent-color: #000;
         }
     }
 }
@@ -276,13 +339,27 @@ header {
         font-weight: 300;
         font-size: 12px;
         color: #fff;
+
+        @media screen and (max-width: 1024px) {
+            display: none;
+        }
     }
 }
 
 .promo__img {
     grid-column: 4/9;
     grid-row: 2/4;
-    margin: 90px 0 0 32px;
+    margin-top: 90px;
+    background-image: url("../img/xbox_ps.png");
+
+    @media screen and (max-width: 1024px) {
+        grid-column: 4/7;
+        grid-row: 1/3;
+        background-image: url("../img/xbox_ps-1024.png");
+        width: 460px;
+        height: 858px;
+        margin-top: 95px;
+    }
 }
 
 .monitor {
@@ -298,18 +375,32 @@ header {
 }
 
 .monitor__img {
+    margin-top: 42px;
+
     .hp_cyberpunk_logo {
-        margin: 26px 42px;
+        background: url("../icons/monitor_icons/hp_cyberpunk_logo.png") no-repeat;
+        margin: 26px 42px 0 42px;
+        width: 540px;
+        height: 80px;
+
+        @media screen and (max-width: 1024px) {
+            background: url("../icons/monitor_icons/hp_cyberpunk_logo-1024.png") no-repeat;
+            width: 320px;
+            height: 229px;
+            margin: 25px 70px 0 70px;
+        }
     }
 }
 
 .monitor__descr h2 {
+    font-family: 'Archangelsk';
     font-weight: 400;
     font-size: 62px;
     color: #000;
 }
 
 .monitor__descr p {
+    font-family: "Roboto", serif;
     font-weight: 400;
     font-size: 18px;
     line-height: 189%;
@@ -327,6 +418,7 @@ header {
 }
 
 .monitor__more-descr p {
+    font-family: "Roboto", serif;
     margin-left: 10px;
     font-weight: 400;
     font-size: 18px;
@@ -339,6 +431,7 @@ header {
     width: 194px;
     height: 59px;
     background: #000;
+    font-size: 18px;
 }
 
 .buy__game {
@@ -349,6 +442,10 @@ header {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: 32px;
+
+    @media screen and (max-width: 1024px) {
+        grid-template-columns: 1fr 2fr;
+    }
 }
 
 .buy_game_bg {
@@ -360,24 +457,37 @@ header {
         position: absolute;
         background: url('../img/buy_game_bg.jpg') no-repeat;
         width: 944px;
-        height: 703px;
+        height: 707px;
         right: 0;
+
+        @media screen and (max-width: 1024px) {
+            background: url('../img/buy_game_bg-1024.jpg') no-repeat;
+            width: 332px;
+            height: 732px;
+            left: -36px;
+        }
     }
 }
 
 .buy__game__item {
-    padding: 70px 0;
+    padding: 60px 0;
+
+    @media screen and (max-width: 1024px) {
+        padding: 62px 0;
+    }
 }
 
 
 .buy__game {
     .buy__game__header {
+        font-family: 'Archangelsk';
         font-weight: 400;
         font-size: 62px;
         color: #fff;
     }
 
-    .buy__game__subheader {
+    & .buy__game__subheader {
+        font-family: "Roboto", serif;
         margin-top: 25px;
         font-weight: 700;
         font-size: 24px;
@@ -390,11 +500,13 @@ header {
     margin-top: 15px;
 
     .game__descr {
+        margin-top: 15px;
         display: flex;
         flex-direction: row;
         align-items: center;
 
         p {
+            font-family: "Roboto", serif;
             font-weight: 400;
             font-size: 18px;
             color: #fff;
@@ -404,10 +516,14 @@ header {
 }
 
 .buy_game_platforms {
-    margin-top: 70px;
+    margin-top: 64px;
 
     img {
         margin-top: 25px;
+    }
+
+    @media screen and (max-width: 1024px) {
+        margin-top: 70px;
     }
 }
 
@@ -435,6 +551,7 @@ footer {
 }
 
 .footer__support a {
+    font-family: "Roboto", serif;
     text-decoration: none;
     font-weight: 400;
     font-size: 18px;
@@ -450,6 +567,7 @@ footer {
 }
 
 .footer__bottom p {
+    font-family: "Roboto", serif;
     font-weight: 400;
     font-size: 12px;
     text-align: center;
