--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,12 @@ img {
 
 html {
     font-family: "Archangelsk", serif;
+    scroll-behavior: smooth;
+
+    ::selection {
+        color: #000;
+        background-color: #f8f200;
+    }
 }
 
 
@@ -61,12 +67,29 @@ header {
     background: url('../img/bg.jpg') center center / cover no-repeat;
     height: 1000px;
     padding-top: 20px;
+
+    @media screen and (max-width: 320px) {
+        height: 713px;
+    }
 }
 
 .header__info {
     display: flex;
     justify-content: space-between;
     position: relative;
+
+    @media screen and (max-width: 320px) {
+        flex-direction: column;
+        justify-content: start;
+        align-items: center;
+    }
+}
+
+.header__logo {
+    @media screen and (max-width: 320px) {
+        width: 200px;
+        height: 50px;
+    }
 }
 
 .social__icon {
@@ -74,6 +97,19 @@ header {
     width: 379px;
     align-items: center;
     justify-content: space-between;
+
+    @media screen and (max-width: 320px) {
+        width: 296px;
+        height: 25px;
+        margin-top: 10px;
+    }
+
+    a {
+        @media screen and (max-width: 320px) {
+            width: 25px;
+            height: 25px;
+        }
+    }
 }
 
 .header__more {
@@ -86,29 +122,55 @@ header {
     padding: 70px;
     clip-path: polygon(8% 0, 100% 0%, 100% 87%, 92% 100%, 0 100%, 0 13%);
 
+    p {
+        font-family: 'Archangelsk';
+        font-weight: 400;
+        font-size: 62px;
+        color: #000;
+
+        @media screen and (max-width: 320px) {
+            font-size: 30px;
+            text-align: center;
+        }
+    }
+
+    button {
+        margin-top: 20px;
+        width: 272px;
+        height: 78px;
+
+        @media screen and (max-width: 320px) {
+            width: 244px;
+            height: 60px;
+        }
+    }
+
+    @media screen and (max-width: 320px) {
+        top: 540px;
+        width: 320px;
+        height: 207px;
+        padding: 30px 38px;
+        clip-path: polygon(15% 0, 100% 0%, 100% 75%, 85% 100%, 0 100%, 0 25%);
+    }
+
     /* @media screen and (max-width: 1024px) {
         left: 328px;
     } */
 }
 
-.header__more p {
-    font-family: 'Archangelsk';
-    font-weight: 400;
-    font-size: 62px;
-    color: #000;
-}
-
-.header__more button {
-    margin-top: 20px;
-    width: 272px;
-    height: 78px;
-}
-
 .info {
     padding: 70px 0;
+
+    @media screen and (max-width: 320px) {
+        padding: 100px 0;
+    }
 }
 
 .info__wrapper {
+    @media screen and (max-width: 320px) {
+        padding: 0 12px;
+    }
+
     h1 {
         font-family: 'Archangelsk';
         font-weight: 400;
@@ -117,6 +179,11 @@ header {
 
         @media screen and (max-width: 1024px) {
             width: 70%;
+        }
+
+        @media screen and (max-width: 320px) {
+            font-size: 30px;
+            width: 100%;
         }
     }
 
@@ -136,6 +203,13 @@ header {
         @media screen and (max-width: 1024px) {
             width: 90%;
         }
+
+        @media screen and (max-width: 320px) {
+            font-size: 16px;
+            line-height: 200%;
+            margin-top: 25px;
+            width: 100%;
+        }
     }
 }
 
@@ -151,6 +225,11 @@ header {
         row-gap: 32px;
     }
 
+    @media screen and (max-width: 320px) {
+        grid-template-columns: 1fr;
+        grid-template-rows: repeat(2, 1fr) 3fr;
+    }
+
     .info__img-city_24 {
         grid-column: 1/4;
         grid-row: 1/2;
@@ -159,6 +238,12 @@ header {
         @media screen and (max-width: 1024px) {
             grid-column: 1/4;
             grid-row: 1/2;
+        }
+
+        @media screen and (max-width: 320px) {
+            grid-column: 1;
+            grid-row: 1/2;
+            clip-path: polygon(11% 0, 100% 0%, 100% 76%, 89% 100%, 0 100%, 0 27%);
         }
     }
 
@@ -171,17 +256,29 @@ header {
             grid-column: 4/7;
             grid-row: 1/2;
         }
+
+        @media screen and (max-width: 320px) {
+            grid-column: 1;
+            grid-row: 2/3;
+            clip-path: polygon(11% 0, 100% 0%, 100% 76%, 89% 100%, 0 100%, 0 27%);
+        }
     }
 
     .info__img-city {
         grid-column: 4/9;
         grid-row: 1/3;
-        width: 100%;
 
         @media screen and (max-width: 1024px) {
             grid-column: 1/7;
             grid-row: 2/3;
             clip-path: polygon(6% 0, 100% 0%, 100% 89%, 94% 100%, 0 100%, 0 11%);
+        }
+
+        @media screen and (max-width: 320px) {
+            grid-column: 1;
+            grid-row: 3/4;
+            clip-path: polygon(12% 0, 100% 0%, 100% 89%, 88% 100%, 0 100%, 0 10%);
+            object-fit: cover;
         }
     }
 
@@ -197,6 +294,10 @@ header {
     background: no-repeat top / 100% 70px url('../img/dust_up.png');
     background-color: #000;
     padding: 85px 0 70px 0;
+
+    @media screen and (max-width: 320px) {
+        padding: 70px 12px;
+    }
 }
 
 .promo__items {
@@ -205,10 +306,15 @@ header {
     grid-template-rows: repeat(3, 1fr);
     row-gap: 63px;
     column-gap: 32px;
+    position: relative;
 
     @media screen and (max-width: 1024px) {
         grid-template-columns: repeat(6, 1fr);
         grid-template-rows: repeat(2, 1fr);
+    }
+
+    @media screen and (max-width: 320px) {
+        display: inline-block;
     }
 }
 
@@ -239,12 +345,23 @@ header {
         @media screen and (max-width: 1024px) {
             margin: 0 15px 0 0;
         }
+
+        @media screen and (max-width: 320px) {
+            margin-top: 143px;
+            font-size: 30px;
+        }
     }
 
     img {
         width: 132px;
         height: 132px;
         margin-top: 15px;
+
+        @media screen and (max-width: 320px) {
+            width: 62px;
+            height: 62px;
+            margin-top: 6px;
+        }
     }
 }
 
@@ -259,6 +376,11 @@ header {
     span {
         font-weight: 700;
         color: #52bedc;
+    }
+
+    @media screen and (max-width: 320px) {
+        font-size: 16px;
+        line-height: 200%;
     }
 }
 
@@ -283,6 +405,12 @@ header {
         height: 35px;
         border: 2px solid black;
         border-bottom: 1px solid gray;
+
+        @media screen and (max-width: 320px) {
+            width: 296px;
+            height: 33px;
+            font-size: 16px;
+        }
     }
 
     button {
@@ -332,6 +460,10 @@ header {
         font-size: 18px;
         text-decoration: underline;
         color: #fff;
+
+        @media screen and (max-width: 320px) {
+            font-size: 16px;
+        }
     }
 
     h4 {
@@ -344,6 +476,11 @@ header {
             display: none;
         }
     }
+
+    @media screen and (max-width: 320px) {
+        width: 296px;
+        height: 120px;
+    }
 }
 
 .promo__img {
@@ -351,6 +488,7 @@ header {
     grid-row: 2/4;
     margin-top: 90px;
     background-image: url("../img/xbox_ps.png");
+    height: 456px;
 
     @media screen and (max-width: 1024px) {
         grid-column: 4/7;
@@ -360,22 +498,52 @@ header {
         height: 858px;
         margin-top: 95px;
     }
+
+    @media screen and (max-width: 320px) {
+        display: block;
+        position: absolute;
+        background-image: url("../img/xbox_ps-320.png");
+        width: 296px;
+        height: 130px;
+        top: -40px;
+    }
 }
 
 .monitor {
     background: no-repeat top / 100% 70px url('../img/monitor_dust.png');
     background-color: #f8f200;
+
+    ::selection {
+        background-color: #000;
+        color: #f8f200;
+    }
 }
 
 .monitor__wrapper {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: 32px;
-    padding: 140px 0 70px 0;
+    padding: 140px 70px 70px 70px;
+
+    @media screen and (max-width: 320px) {
+        display: inline-block;
+        padding: 140px 12px 70px 12px;
+    }
 }
 
 .monitor__img {
     margin-top: 42px;
+
+    @media screen and (max-width: 320px) {
+        margin-top: 0;
+    }
+
+    .monitor__hp {
+        @media screen and (max-width: 320px) {
+            width: 296px;
+            height: 204px;
+        }
+    }
 
     .hp_cyberpunk_logo {
         background: url("../icons/monitor_icons/hp_cyberpunk_logo.png") no-repeat;
@@ -387,7 +555,15 @@ header {
             background: url("../icons/monitor_icons/hp_cyberpunk_logo-1024.png") no-repeat;
             width: 320px;
             height: 229px;
-            margin: 25px 70px 0 70px;
+            margin-top: 25px;
+        }
+
+        @media screen and (max-width: 320px) {
+            background: url("../icons/monitor_icons/hp_cyberpunk_logo.png") no-repeat;
+            width: 296px;
+            height: 44px;
+            background-size: contain;
+            margin: 25px 0 0 0;
         }
     }
 }
@@ -397,6 +573,11 @@ header {
     font-weight: 400;
     font-size: 62px;
     color: #000;
+
+    @media screen and (max-width: 320px) {
+        font-size: 30px;
+        margin-top: 40px;
+    }
 }
 
 .monitor__descr p {
@@ -406,6 +587,10 @@ header {
     line-height: 189%;
     color: #000;
     margin-top: 25px;
+
+    @media screen and (max-width: 320px) {
+        font-size: 16px;
+    }
 }
 
 .monitor__more {
@@ -415,6 +600,13 @@ header {
 .monitor__more-descr {
     display: flex;
     align-items: center;
+
+    img {
+        @media screen and (max-width: 320px) {
+            width: 24px;
+            height: 24px;
+        }
+    }
 }
 
 .monitor__more-descr p {
@@ -424,6 +616,12 @@ header {
     font-size: 18px;
     color: #000;
     margin-top: 0;
+
+    @media screen and (max-width: 320px) {
+        font-size: 16px;
+        margin-left: 18px;
+        line-height: 120%;
+    }
 }
 
 .monitor__descr button {
@@ -446,6 +644,10 @@ header {
     @media screen and (max-width: 1024px) {
         grid-template-columns: 1fr 2fr;
     }
+
+    @media screen and (max-width: 320px) {
+        display: inline-block;
+    }
 }
 
 .buy_game_bg {
@@ -466,6 +668,16 @@ header {
             height: 732px;
             left: -36px;
         }
+
+        @media screen and (max-width: 320px) {
+            display: none;
+        }
+    }
+
+    @media screen and (max-width: 320px) {
+        background: url("../img/buy_game_bg-320.jpg") no-repeat;
+        width: 320px;
+        height: 198px;
     }
 }
 
@@ -474,6 +686,10 @@ header {
 
     @media screen and (max-width: 1024px) {
         padding: 62px 0;
+    }
+
+    @media screen and (max-width: 320px) {
+        padding: 40px 12px 70px 12px;
     }
 }
 
@@ -484,6 +700,10 @@ header {
         font-weight: 400;
         font-size: 62px;
         color: #fff;
+
+        @media screen and (max-width: 320px) {
+            font-size: 30px;
+        }
     }
 
     & .buy__game__subheader {
@@ -492,6 +712,10 @@ header {
         font-weight: 700;
         font-size: 24px;
         color: #52bedc;
+
+        @media screen and (max-width: 320px) {
+            font-size: 20px;
+        }
     }
 }
 
@@ -505,13 +729,29 @@ header {
         flex-direction: row;
         align-items: center;
 
+        img {
+            @media screen and (max-width: 320px) {
+                width: 24px;
+                height: 24px;
+            }
+        }
+
         p {
             font-family: "Roboto", serif;
             font-weight: 400;
             font-size: 18px;
             color: #fff;
             margin-left: 10px;
+
+            @media screen and (max-width: 320px) {
+                font-size: 16px;
+                margin-left: 18px;
+            }
         }
+    }
+
+    @media screen and (max-width: 320px) {
+        margin-top: 22px;
     }
 }
 
@@ -525,6 +765,10 @@ header {
     @media screen and (max-width: 1024px) {
         margin-top: 70px;
     }
+
+    @media screen and (max-width: 320px) {
+        margin-top: 40px;
+    }
 }
 
 footer {
@@ -535,12 +779,33 @@ footer {
     display: flex;
     justify-content: space-between;
     margin: 13px;
+
+    @media screen and (max-width: 320px) {
+        flex-direction: column;
+        padding: 40px 12px 25px 12px;
+        margin: 0;
+    }
 }
 
 .footer__logo {
     display: flex;
     justify-content: space-between;
     width: 500px;
+
+    @media screen and (max-width: 320px) {
+        flex-direction: column;
+        align-items: center;
+        width: 296px;
+        gap: 25px;
+
+        .cyberpunk_logo {
+            width: 200px;
+        }
+
+        .cd_project_logo {
+            width: 116px;
+        }
+    }
 }
 
 .footer__support {
@@ -548,6 +813,13 @@ footer {
     justify-content: space-between;
     align-items: center;
     width: 385px;
+
+    @media screen and (max-width: 320px) {
+        flex-direction: column;
+        width: 296px;
+        margin-top: 50px;
+        gap: 15px;
+    }
 }
 
 .footer__support a {
@@ -556,13 +828,16 @@ footer {
     font-weight: 400;
     font-size: 18px;
     color: #000;
+
+    @media screen and (max-width: 320px) {
+        font-size: 16px;
+    }
 }
 
 .footer__bottom {
     background-color: #000;
     height: 40px;
     width: 100%;
-    margin-top: 13px;
     padding: 13px;
 }
 
